# eggrd

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  edgeguard.toml
.github/workflows/: ci.yml  dockerhub-readme.yml  release.yml
benches/: auth.rs  response.rs  waf.rs
docs/: COMPARISON.md  DEPLOYMENT.md  DOCKERHUB.md  TESTPLAN.md
edgeguard-ner/: Cargo.toml
edgeguard-ner/src/: lib.rs
examples/: Dockerfile.node  Dockerfile.python  docker-compose.yml  edgeguard.service  fly.toml  render.yaml
loadtest/: .gitignore  Dockerfile.edgeguard  README.md  docker-compose.compare.yml  docker-compose.yml  pebble.compose.yaml  run-compare.sh  run.sh
loadtest/compare/: summarize.sh
loadtest/compare/caddy/: Caddyfile
loadtest/compare/envoy/: envoy.yaml
loadtest/compare/haproxy/: haproxy.cfg
loadtest/compare/nginx/: nginx.conf
loadtest/compare/traefik/: dynamic.yml  traefik.yml
loadtest/configs/: auth-apikey.toml  baseline.toml  full.toml  ratelimit-local.toml  ratelimit-redis.toml  waf-block.toml
loadtest/ec2/: .gitignore  README.md  provision.sh  run-saturation.sh  summarize-ec2.sh  teardown.sh  userdata-loadgen.sh  userdata-proxy.sh
loadtest/ec2/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
loadtest/grafana/: README.md  eggrd-overview.import.json
loadtest/grafana/provisioning/dashboards/: dashboards.yml  eggrd-overview.json
loadtest/grafana/provisioning/datasources/: prometheus.yml
loadtest/k6/: auth.js  baseline.js  lib.js  ratelimit.js  saturation.js  soak.js  waf.js
loadtest/prometheus/: prometheus.yml
loadtest/upstream/: default.conf
monitoring/: README.md  compose.yaml  edgeguard.demo.toml  upstream.conf
monitoring/grafana/dashboards/: edgeguard-overview.json
monitoring/grafana/provisioning/dashboards/: edgeguard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
src/: access.rs  acme.rs  alert.rs  auth.rs  budget.rs  config.rs  cors.rs  cp.rs  dlp.rs  doctor.rs  generate.rs  keyvault.rs  lib.rs  limiter.rs  llm.rs  main.rs  metrics.rs  proxy.rs  reload.rs  scaffold.rs  supervisor.rs  telemetry.rs  tls.rs  waf.rs
tests/: integration.rs
worker/: .gitignore  Cargo.toml  README.md  wrangler.toml
worker/src/: lib.rs
